--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 			<section id="One" class="wrapper style3" style="height:600px;">
 				<div class="inner">
 					<header class="align-center">
-						<p>Minor Error</p>
-						<h3>We... Don't have that yet. Sorry. But we've got email, and cookies!</h3>
+						<p>Your next hint is:</p>
+						<h3>Supernatural transportation</h3>
 					</header>
 				</div>
 			</section>
@@ -43,12 +43,7 @@
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="container">
-					<ul class="icons">
-						<li><a href="generic.html" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="generic.html" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href='generic.html' class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="mailTo:m.EdwardsonX@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-					</ul>
+					
 				</div>
 				<div class="copyright">
 					&copy; Mark Edwardson. All rights reserved. | <a href="generic.html">Privacy Policy.</a>
