--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>About Me.</title>
+		<title>Easter Hunt</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="main.css" />
@@ -43,7 +43,7 @@
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="container">
-					
+
 				</div>
 				<div class="copyright">
 					&copy; Mark Edwardson. All rights reserved. | <a href="generic.html">Privacy Policy.</a>
